Fix typeahead gap

--- a/src/css/forms.less
+++ b/src/css/forms.less
@@ -289,6 +289,7 @@ progress::-webkit-progress-value {
 [role='combobox'] {
   display: flex;
   flex-wrap: wrap;
+  gap: 0.5rem;
 
   & > input {
     all: unset;
@@ -300,8 +301,6 @@ progress::-webkit-progress-value {
     --padding-horizontal: 0.5rem;
 
     --button-border: var(--palette-border);
-
-    margin-right: 0.5rem;
 
     text-transform: none;
   }
